# Firmware_-_FlightControl

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMMANDEXE.md  CONFIGURATION.md  ERRORCODES.md  README.md  SCHEMA.md  project.properties
.github/workflows/: README.md  compile.yaml  manual-compile.yaml  manual-flash.yaml  manual-release.yaml  manual-test.yaml  manual-upload.yaml  pr-workflow.yaml  release-workflow.yaml  release.yaml  test.yaml  upload.yaml
docs/: MainLoopFlowDiagram.mmd  RemoteConfiguration.md  StartupFlowDiagram.md
lib/Driver_-_SDI12AnalogMux/: library.json
lib/Driver_-_SDI12AnalogMux/src/: SDI12AnalogMux.cpp  SDI12AnalogMux.h
lib/Driver_-_SQ202X/: LICENSE  README.md
lib/Driver_-_SQ202X/src/: SQ202X.cpp  SQ202X.h
lib/Sensor/src/: Sensor.h
lib/Talon/src/: Talon.h
src/: FlightControl.cpp  FlightControl_Demo.cpp  FlightControl_Demo.ino  GlobalPins.h
src/configuration/: ConfigurationManager.cpp  ConfigurationManager.h  DefaultConfiguration.json  IConfiguration.h  SensorManager.cpp  SensorManager.h
src/hardware/: AccelerometerBMA456.cpp  AccelerometerBMA456.h  AccelerometerMXC6655.cpp  AccelerometerMXC6655.h  AmbientLightVEML3328.cpp  AmbientLightVEML3328.h  CurrentSenseAmplifierPAC1934.cpp  CurrentSenseAmplifierPAC1934.h  GpsSFE_UBLOX_GNSS.cpp  GpsSFE_UBLOX_GNSS.h  HumidityTemperatureAdafruit_SHT4X.cpp  HumidityTemperatureAdafruit_SHT4X.h  IOExpanderPCAL9535A.cpp  IOExpanderPCAL9535A.h  LedPCA9634.cpp  LedPCA9634.h  RtcMCP79412.cpp  RtcMCP79412.h
src/platform/: ParticleCloud.cpp  ParticleCloud.h  ParticleGpio.cpp  ParticleGpio.h  ParticleSerial.cpp  ParticleSerial.h  ParticleSystem.cpp  ParticleSystem.h  ParticleWire.cpp  ParticleWire.h
test/: CMakeLists.txt  main.cpp
test/mocks/: Arduino.cpp  Arduino.h  HARDWARE_INTERFACES.md  MockAdafruit_SHT4X.h  MockArduino.cpp  MockArduino.h  MockBMA456.cpp  MockBMA456.h  MockCloud.h  MockConfiguration.h  MockGNSS.cpp  MockGNSS.h  MockGpio.h  MockIncludes.h  MockMCP79412.cpp  MockMCP79412.h  MockMXC6655.cpp  MockMXC6655.h  MockPAC1934.cpp  MockPAC1934.h  MockPCA9634.cpp  MockPCA9634.h  MockPCAL9535A.cpp  MockPCAL9535A.h  MockParticle.h  MockSFE_UBLOX_GNSS.h  MockSHT4x.cpp  MockSHT4x.h  MockSPI.cpp  MockSensor.h  MockSerial.h  MockSystem.h  MockVEML3328.cpp  MockVEML3328.h  MockWire.cpp  MockWire.h  MockWireDeclare.h  Particle.cpp  Particle.h  SPI.h  (+5 more)
test/sample_configurations/: full_config.json  minimal_config.json  standard_config.json
test/unit/ConfigurationManager/: ConfigurationManagerTest.cpp
test/unit/Driver-_-Kestrel/: Driver-_-KestrelTest.cpp  kestrel_basic_test.cpp
test/unit/Driver_-_Kestrel/: Driver_-_KestrelFunctionTests.cpp  Driver_-_KestrelSetupTests.cpp  KestrelTest.cpp
test/unit/FlightControl_Demo/: FlightControl_DemoTest.cpp  FlightControl_DemoTestHarness.cpp  FlightControl_DemoTestHarness.h  flight_control_basic_test.cpp  test_harness.cpp  test_harness.h
test/unit/SensorManager/: SensorManagerTest.cpp
